2016-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix problem while reading file
	"pxypjhfdxf.svg.7406476585885697806" provided via via private
	email from Gustavo Grieco on May 24, 2016.

	* coders/svg.c: Fix problem while reading file
	"pxypjhfdxf.svg.308008972284643989" provided via private email
	from Gustavo Grieco on May 24, 2016.

2016-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c ("C"): Support font-size "medium".

2016-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated NEWS.txt to reflect latest changes.

	* magick/render.c (DrawImage): Added DrawImage() recursion
	detection/prevention.

	* coders/svg.c (ReadSVGImage): Add basic primitive argument
	validation.

	* magick/render.c (DrawImage): Add basic primitive argument
	validation.

2016-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/url.c (ReadURLImage): Reading "file://" URLs was not
	working.  Now file URLs are working.

2016-05-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Respect JPEG limits (65535x65535) and user width
	and height limits from "-limit" while reading or writing JNG files.

2016-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/url.c: Don't hide HTTP, FTP, and FILE URL support from
	'-list format' output.  Ignore HTTP, FTP, and FILE as a useful
	file extension for determing the file format.

2016-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPathToPolygon): Make sure that first
	edge is initialized.  Make sure that points is not null.

2016-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fixed segmentation violation while
	reading file "275077586554139424.lqxdgqxtfs.svg" provided via
	private email from Gustavo Grieco on May 15, 2016.  This is due to
	another CVE-2016-2317 related issue.

2016-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
