@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160525"
-#define public MagickPackageReleaseDate "snapshot-20160525"
+#define public MagickPackageVersionAddendum ".020160528"
+#define public MagickPackageReleaseDate "snapshot-20160528"
