@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2016-05-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/render.c (DrawImage): Compute a Bézier quantum which
+takes image dimensions into account.  This should help address
+CVE-2016-2317 &quot;Heap buffer overflow&quot;.  This resolves SourceForge
+issue #275 &quot;Applying Clipping Path to high resolution JPG&quot;.</li>
+</ul>
+</blockquote>
 <p>2016-05-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
